testData/src/error/WhiteSpace.java
/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */
package error;

/**
 * test
 */
public class WhiteSpace {

  public void test() {
    int a = 0;
    try {
    } catch (Exception e) {
    }
    for(int i= 0;i < 10;i++)
    {

    }
  }


}

